--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,8 @@ dist
 
 # FuseBox cache
 .fusebox/
+package-lock.json
+uploads
 
 # DynamoDB Local files
 .dynamodb/
@@ -115,3 +117,5 @@ dist
 .yarn/install-state.gz
 .pnp.*
 package-lock.json
+uploads
+static
