--- a/package.json
+++ b/package.json
@@ -5,6 +5,56 @@
   "main": "index.js",
   "author": "sj",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.2.4",
+    "aws-sdk": "^2.868.0",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^4.2.2",
+    "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "helmet": "^4.3.1",
+    "mongoose": "^5.11.14",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "node-sass": "^5.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
+    "pug": "^3.0.0",
+    "sass-loader": "^10.1.1",
+    "webpack": "^5.23.0"
+  },
+  "scripts": {
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 '.scss' --ignore 'static' ",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack",
+    "tunnel": "lt --port 4000"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^1.3.0",
+    "nodemon": "^2.0.7",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^2.9.7"
+  },
+  "browserslist": [
+    "ie > 0",
+    "chrome > 0",
+    "firefox > 0"
+  ]
 }
